--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "darkaonline/swagger-lume": "8.*",
+        "irazasyed/telegram-bot-sdk": "^3.5",
         "laravel/lumen-framework": "^8.3.1"
     },
     "require-dev": {
